<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="48dp"
    tools:context=".MessagePreviewActivity">

    <TextView
        android:id="@+id/text_view_preview_SendToTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_preview_SendToTitle"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_preview_SendToItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_preview_SendToTitle"
        tools:text="@string/text_view_preview_SendToTest" />

    <TextView
        android:id="@+id/text_view_preview_MessageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_view_preview_MessageTitle"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_preview_SendToItems" />

    <TextView
        android:id="@+id/text_view_preview_Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_preview_MessageTitle"
        tools:text="@string/text_view_preview_Message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_preview_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/button_preview_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_preview_Message" />

</androidx.constraintlayout.widget.ConstraintLayout>